Added clear: both for float

--- a/float/css/style.css
+++ b/float/css/style.css
@@ -95,3 +95,9 @@ body {
     color: #a11414;
     text-decoration: underline;
 }
+
+.nav_wrap::after {
+    content: "";
+    display: table;
+    clear: both;
+}
